--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,10 @@ dependencies {
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
     
+    // Hamcrest
+    testCompile 'org.hamcrest:hamcrest-library:1.3'
     
-    
+    // AssertJ 
     testCompile 'org.assertj:assertj-core:3.6.2'
     
 }
