--- a/.classpath
+++ b/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry kind="con" path="org.eclipse.buildship.core.gradleclasspathcontainer"/>
 	<classpathentry kind="lib" path="C:/Users/Eugene/Desktop/assertj-core-3.6.2.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Eugene/Desktop/hamcrest-all-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Eugene/Desktop/mockito-all-1.10.19.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
